static/styles/styles.css
/* ... */
.sidebar {
  position: relative;
  background-color: #071E22;
  padding: 20px 25px;
  height: 500px;
  overflow: auto;
}

.sidebar:not(:last-child) {
  margin-bottom: 20px;
}

.sidebar__heading {
  font-family: "Pirata One", cursive;
  font-size: 26px;
}

.sidebar__text--history {
  opacity: 0.5;
}

@media (max-width: 56.25em) {
  .sidebar {
    height: auto;
    max-height: 200px;
  }
}
.turn-choice {
  border: none;
}

.turn-choice__btn {
  float: left;
  font-family: inherit;
  font-size: 20px;
  height: 140px;
  width: calc(50% - 1px);
  padding: 10px 14px;
  border: none;
  background-color: #ffbc00;
}

.turn-choice__btn:not(:last-child) {
  margin-right: 2px;
}

.turn-choice__btn:hover {
  cursor: pointer;
}

.turn-choice__btn:disabled,
.turn-choice:disabled .turn-choice__btn {
  opacity: 0.25;
  color: #000000;
}

.turn-choice:disabled .turn-choice__btn:hover {
  cursor: default;
}

@media (max-width: 37.5em) {
  .turn-choice__btn {
    height: 60px;
  }
}
.action-box {
  position: relative;
  width: 500px;
  font-family: "Pirata One", cursive;
}

.action-box__msg-box {
  float: left;
  position: relative;
  height: 100%;
  width: 38%;
  padding: 20px 25px;
  margin-bottom: 20px;
  background-color: #071E22;
  min-height: 140px;
}

.action-box__msg-box--buttons {
  padding: 0;
  width: 24%;
  background-color: transparent;
}

.action-box__msg-box--roll {
  text-align: center;
}

.action-box__die {
  margin-top: 8px;
}

@media (max-width: 37.5em) {
  .action-box {
    width: 100%;
  }

  .action-box__msg-box {
    width: 100%;
    min-height: auto;
    margin-bottom: 10px;
  }

  .action-box__msg-box:not(:last-child) {
    margin-right: 0;
  }
}
.modal {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #071E22;
  width: 600px;
  max-width: 90%;
  height: 400px;
  max-height: 90%;
  z-index: 100;
}

.body--modal-open .modal--active,
.body--modal-open .modal__overlay {
  display: block;
}

.body--modal-open .js-open-rules-modal-btn {
  display: none;
}

body.body--modal-open {
  overflow: hidden;
}

.modal__inner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 30px 50px;
  overflow: auto;
}

.modal__heading {
  margin-bottom: 20px;
}

.modal__overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 50;
  background: rgba(0, 0, 0, 0.6);
}

.modal__close-btn {
  position: absolute;
  top: 30px;
  right: 30px;
  padding: 0;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.modal__close-btn svg {
  fill: #ffbc00;
}

@media (max-width: 56.25em) {
  .modal__inner {
    padding: 30px;
  }
}
.rules__btn {
  position: fixed;
  bottom: 30px;
  left: 30px;
  padding: 12px 18px;
  z-index: 100;
  background: #071E22;
  color: #ffffff;
  border: none;
  cursor: pointer;
  box-shadow: 2px 2px 8px 0px black;
}

.rules__btn--close {
  position: absolute;
  top: 30px;
  right: 30px;
  bottom: auto;
  left: auto;
}

.rules__close-btn svg {
  fill: #ffbc00;
}

.button {
  background-color: #ffbc00;
  display: inline-block;
  padding: 10px 15px;
  font-size: 20px;
  border-radius: 0;
  -webkit-appearance: none;
  border: 1px solid transparent;
  min-height: 45px;
}

.button--refresh {
  background-image: url(../images/refresh.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-color: #002642;
  padding: 10px 25px;
}

.buttons-row .button {
  float: left;
}

.buttons-row .button:not(:last-child) {
  margin-right: 20px;
}

.button:hover {
  cursor: pointer;
}

.notice {
  margin-top: 15px;
  padding: 20px 30px;
  border: 1px solid #e8d600;
  background: #443400;
  margin-bottom: 26px;
}

.notice--error {
  border: 1px solid #e80000;
  background: #1a0000;
}

.room-list {
  margin-top: 20px;
  margin-bottom: 20px;
}

.room-list table {
  width: 100%;
  text-align: left;
  border-collapse: collapse;
}

.room-list thead {
  border-bottom: 1px solid #ffffff;
}

.room-list a {
  color: #ffffff;
  text-decoration: none;
}

.scoreboard {
  min-height: 140px;
  font-family: "Pirata One", cursive;
  margin-bottom: 20px;
}

.scoreboard--active-player .js-scoreboard-player {
  animation-duration: 1.5s;
  animation-name: pulseGreen;
  animation-iteration-count: infinite;
}

.scoreboard--active-opponent .js-scoreboard-opponent {
  animation-duration: 1.5s;
  animation-name: pulseRed;
  animation-iteration-count: infinite;
}

.scoreboard__player {
  position: relative;
  background-color: #071E22;
  text-transform: uppercase;
  border-top: 16px solid #56ff00;
  color: #56ff00;
  height: 70px;
  background-color: #071E22;
}

.scoreboard__player--opponent {
  border-color: #FF0054;
  color: #FF0054;
}

.scoreboard__player--active-opponent {
  animation-duration: 1.5s;
  animation-name: pulseRedText;
  animation-iteration-count: infinite;
}

.scoreboard__name {
  float: left;
  margin-left: 25px;
  font-size: 32px;
  height: 100%;
}

.scoreboard__score-container {
  float: right;
  position: relative;
  background-color: #e9e9e9;
  font-size: 46px;
  text-align: center;
  width: 62px;
  color: #071E22;
  height: 100%;
}

.scoreboard__score {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.single-row-form__input {
  color: #ffffff;
  background-color: #002642;
  display: inline-block;
  padding: 10px 15px;
  font-size: 20px;
  border-radius: 0;
  -webkit-appearance: none;
  border: 1px solid transparent;
  max-width: 100%;
}

@media (max-width: 37.5em) {
  .single-row-form__input {
    width: 100%;
  }

  .single-row-form .button {
    width: 100%;
  }
}
.logo-container {
  position: relative;
}

.logo-container__logo {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

/*# sourceMappingURL=styles.css.map */

